templates/template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualMachines_vm_veterinaria_test_name": {
      "type": "string",
      "defaultValue": "vm-veterinaria-test"
    },
    "storageAccounts_stvetsctest2026xx_name": {
      "type": "string",
      "defaultValue": "stvetsctest2026xx"
    },
    "networkInterfaces_vm_veterinaria_test400_name": {
      "type": "string",
      "defaultValue": "vm-veterinaria-test400"
    },
    "publicIPAddresses_vm_veterinaria_test_ip_name": {
      "type": "string",
      "defaultValue": "vm-veterinaria-test-ip"
    },
    "virtualNetworks_vm_veterinaria_test_vnet_name": {
      "type": "string",
      "defaultValue": "vm-veterinaria-test-vnet"
    },
    "flexibleServers_mysql_vet_sc_test2026_name": {
      "type": "string",
      "defaultValue": "mysql-vet-sc-test2026"
    },
    "networkSecurityGroups_vm_veterinaria_test_nsg_name": {
      "type": "string",
      "defaultValue": "vm-veterinaria-test-nsg"
    },
    "adminPassword": {
      "type": "securestring",
      "defaultValue": "VeterinariaPassword2026*"
    }
  },
  "resources": [
    {
      "type": "Microsoft.DBforMySQL/flexibleServers",
      "apiVersion": "2025-06-01-preview",
      "name": "[parameters('flexibleServers_mysql_vet_sc_test2026_name')]",
      "location": "Chile Central",
      "sku": {
        "name": "Standard_B1ms",
        "tier": "Burstable"
      },
      "properties": {
        "administratorLogin": "sqldiegoupn",
        "storage": {
          "storageSizeGB": 20,
          "iops": 360,
          "autoGrow": "Enabled",
          "autoIoScaling": "Enabled",
          "logOnDisk": "Disabled",
          "storageRedundancy": "LocalRedundancy"
        },
        "version": "8.0.21",
        "availabilityZone": "3",
        "network": {
          "publicNetworkAccess": "Enabled"
        },
        "backup": {
          "backupRetentionDays": 7,
          "backupIntervalHours": 24,
          "geoRedundantBackup": "Disabled"
        },
        "highAvailability": {
          "mode": "Disabled"
        }
      }
    },
    {
      "type": "Microsoft.DBforMySQL/flexibleServers/firewallRules",
      "apiVersion": "2025-06-01-preview",
      "name": "[format('{0}/allow-azure-internal-services', parameters('flexibleServers_mysql_vet_sc_test2026_name'))]",
      "properties": {
        "startIpAddress": "0.0.0.0",
        "endIpAddress": "0.0.0.0"
      },
      "dependsOn": [
        "[resourceId('Microsoft.DBforMySQL/flexibleServers', parameters('flexibleServers_mysql_vet_sc_test2026_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2025-05-01",
      "name": "[parameters('networkSecurityGroups_vm_veterinaria_test_nsg_name')]",
      "location": "chilecentral",
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-Tomcat-8080",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1010,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2025-05-01",
      "name": "[parameters('publicIPAddresses_vm_veterinaria_test_ip_name')]",
      "location": "chilecentral",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2025-05-01",
      "name": "[parameters('virtualNetworks_vm_veterinaria_test_vnet_name')]",
      "location": "chilecentral",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "subnet-app",
            "properties": {
              "addressPrefix": "10.0.0.0/24"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2026-04-01",
      "name": "[parameters('storageAccounts_stvetsctest2026xx_name')]",
      "location": "chilecentral",
      "sku": {
        "name": "Standard_LRS"
      },
      "kind": "StorageV2",
      "properties": {
        "minimumTlsVersion": "TLS1_2",
        "allowBlobPublicAccess": false,
        "supportsHttpsTrafficOnly": true
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2025-05-01",
      "name": "[parameters('networkInterfaces_vm_veterinaria_test400_name')]",
      "location": "chilecentral",
      "kind": "Regular",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm_veterinaria_test_ip_name'))]"
              },
              "subnet": {
                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vm_veterinaria_test_vnet_name')), '/subnets/subnet-app')]"
              },
              "primary": true,
              "privateIPAddressVersion": "IPv4"
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_vm_veterinaria_test_nsg_name'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm_veterinaria_test_ip_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vm_veterinaria_test_vnet_name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_vm_veterinaria_test_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2025-11-01",
      "name": "[parameters('virtualMachines_vm_veterinaria_test_name')]",
      "location": "chilecentral",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v3"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "canonical",
            "offer": "ubuntu-24_04-lts",
            "sku": "server",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Linux",
            "name": "[format('{0}_disk1_test', parameters('virtualMachines_vm_veterinaria_test_name'))]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            },
            "diskSizeGB": 30
          }
        },
        "osProfile": {
          "computerName": "[parameters('virtualMachines_vm_veterinaria_test_name')]",
          "adminUsername": "Diegoupn123",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false,
            "provisionVMAgent": true
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm_veterinaria_test400_name'))]"
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm_veterinaria_test400_name'))]"
      ]
    }
  ]
}
